src/components/header/header.module.css
:root {
  --header-desktop-height: 207px;
  --header-mobile-height: 117px;
}

.header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 17px var(--mobile-block-padding);
  box-sizing: border-box;
  position: fixed;
  width: 100%;
  margin: 0 auto;
  max-width: 625px;
  background-color: var(--main-bg-color);
}
.navigation__links {
  display: flex;
  justify-content: space-between;
  align-items: center;
  gap: 40px;
}

.navigation__link {
  color: var(--span-text-color);
  text-decoration: none;
  font-size: var(--mobile-maintext-font);
}
.menu__link {
  composes: navigation__link;
  display: none;
}

.cart__link {
  composes: navigation__link;
  width: 25px;
  height: 25px;

  background-image: url(../../images/cart.svg);
  background-size: contain;
}
.logo__image {
  width: 80px;
  height: 80px;
}
.hamburger__menu {
  width: 28px;
  height: 14px;
  border: none;
  cursor: pointer;
  background-color: transparent;
  background-image: url(../../images/burger.svg);
  background-size: contain;
  background-repeat: no-repeat;
}
@media screen and (min-width: 480px) {
  .hamburger__menu {
    width: 44px;
    height: 22px;
  }
}
@media screen and (min-width: 768px) {
  .header {
    padding: 47px var(--desktop-block-padding);
    max-width: 1440px;
  }
  .hamburger__menu {
    display: none;
  }
  .menu__link {
    display: block;
  }
  .cart__link {
    margin-left: 100px;
  }
  .logo__image {
    width: 110px;
    height: 110px;
  }
  .navigation__link {
    font-size: var(--desktop-maintext-font);
  }
}

